[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = "0.30.0"
reqwest = { version = "0.13.3", features = ["json", "blocking"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
